Fix options on small screens.

--- a/css/narrow.css
+++ b/css/narrow.css
@@ -6,7 +6,3 @@
   display: inline-block;
   text-align: left;
 }
-
-#characters {
-  height: 4em;
-}
